added cors to server

--- a/client/HTML/admin.html
+++ b/client/HTML/admin.html
@@ -4,23 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../JS/admin.js"></script>
+    <script src="../JS/admin.js" type="module"></script>
     <title>Admin page</title>
 </head>
 <body>
     <h1>Admin's page</h1>
     <h2>What do you want to do?</h2>
-    <button id="add">Add a new country</button>
-    <button id="delete">Delete a country</button>
-    <button id="update">Update a country</button>
+    <button id="addButton">Add a new country</button>
+    <button id="deleteButton">Delete a country</button>
+    <button id="updateButton">Update a country</button>
 
-    <form>
-        <input type="password" id="passwordcheck">
-        <input type="text" id="country">
-        <input type="text" id="city">
-        <input type="text" id="befolkning">
-        <button type="submit" id="submit">Submit</button>
-    </form>
+    
     
 </body>
 </html>
