--- a/client/HTML/admin.html
+++ b/client/HTML/admin.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <h1>Admin's page</h1>
-    <h2>What do you want to do?</h2>
+    <h2>What do you want to do?</h2> <a href="./index.html">Tillbaka?</a>
     <button id="addButton">Add a new country</button>
     <button id="updateButton">Update a country</button>
     <button id="deleteButton">Delete a country</button>
+   
     
 
     
